<resources>
    <string name="app_name">NutriVision</string>
    <string name="title_resto_list">Fast-Food &amp; Restaurants</string>

    <string name="fab_str_scan">Scan Barcode</string>
    <string name="fab_str_browse">Browse Food Photo</string>
    <string name="fab_str_capture">Capture Food</string>
    <string name="fab_str_speak">Say the Food Name</string>
    <string name="fab_str_search">Search Food</string>
    <string name="fab_str_resto">Find Resto Menu</string>

    <string name="empty_str_recent">No recent activity. \nEnjoy your day!</string>
    <string name="title_activity_results">Result</string>
    <string name="title_nutrition_facts">"Nutrition Facts"</string>

    <string name="speech_prompt">Say the food name&#8230;</string>
    <string name="speech_tap">Tap on mic to speak</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <string name="msg_no_connection">No connection detected.\n Please try again.</string>
    <string name="msg_no_connection_short">"Can't connect right now"</string>

    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_submit">Submit</string>

    <string name="err_msg_unrecognized_image">Sorry, there was an error recognizing your image.</string>
    <string name="err_msg_unable_to_load_image">Unable to load selected image.</string>
    <string name="err_msg_cannot_connect">"Can't connect right now"</string>
    <string name="info_msg_loading">Loading…</string>
    <string name="confirm_msg_correct">"Is this correct?"</string>
    <string name="info_allow_permission_capture">"You need to allow permission in order to capture images."</string>
    <string name="no_nutrifacts">"Sorry, we can't retrieve nutrition facts about this food."</string>


    <!-- dimensions -->
    <dimen name="image_width">120dp</dimen>
    <dimen name="image_final_width">32dp</dimen>
    <dimen name="spacing_normal">16dp</dimen>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="click_one_of_the_tags_below">Click one of the tags below</string>
    <string name="err_unable_load_image">Unable to load selected image.</string>
</resources>
