<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/btmsheet_gallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/transparent"
    android:gravity="center_vertical"
    android:orientation="vertical">
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/layout_empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <include layout="@layout/image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <include
            layout="@layout/layout_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameFab"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/ic_add"
            android:visibility="invisible"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            fab:menu_backgroundColor="#ccffffff"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|right">
            <!--<com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/fab_str_scan" />-->
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_resto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_restaurant_menu_black_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/fab_str_resto" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mic_black_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/fab_str_speak" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_collections_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/fab_str_browse" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/fab_str_capture" />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/fab_str_search" />
        </com.github.clans.fab.FloatingActionMenu>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
</com.flipboard.bottomsheet.BottomSheetLayout>